--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -121,6 +121,9 @@ Metrics/MethodLength:
   Exclude:
     - "db/migrate/*.rb"
 
+Metrics/BlockLength:
+  Enabled: false
+
 #################### Layout #####################################
 
 # 1行の文字数
