--- a/config/database.yml
+++ b/config/database.yml
@@ -9,18 +9,20 @@ default: &default
 
 development:
   <<: *default
-  database: UExpress_app_development
+  database: UExpress_DB
+  host: db
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: UExpress_app_test
+  database: UExpress_DB
+  host: db
 
 production:
   <<: *default
-  database: UExpress_app_production
+  database: UExpress_DB
   username: root
   password: Mysql_tomita
   socket: /var/lib/mysql/mysql.sock
