--- a/config/database.yml
+++ b/config/database.yml
@@ -17,12 +17,11 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: UExpress_DB
-  host: db
+  database: UExpress_app_test
 
 production:
   <<: *default
-  database: UExpress_DB
+  database: UExpress_app_production
   username: root
   password: Mysql_tomita
   socket: /var/lib/mysql/mysql.sock
