--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ orbs:
 jobs:
   build:
     docker:
-      - image: cimg/ruby:2.7.4-node
+      - image: cimg/ruby:2.7.4-node-browsers
     steps:
       - checkout
       - ruby/install-deps
@@ -15,7 +15,7 @@ jobs:
           pkg-manager: yarn
   test:
     docker:
-      - image: cimg/ruby:2.7.4-node
+      - image: cimg/ruby:2.7.4-node-browsers
         environment:
           RAILS_ENV: test
       - image: circleci/mysql:8.0.27
