--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ version: 2.1
 orbs:
   ruby: circleci/ruby@1.1.2
   node: circleci/node@4.2.0
-  heroku: circleci/heroku@0.0.10. # Heroku orbを起動する.デプロイするには、環境変数を設定する必要あり。上URL参照。
+  heroku: circleci/heroku@1.2.6 # Heroku orbを起動する.デプロイするには、環境変数を設定する必要あり。上URL参照。
 
 workflows:
   heroku_deploy:   #ワークフローの名前
