systemspec(article)/about create&update an article #11

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -98,6 +98,10 @@ Style/ParenthesesAroundCondition:
 Style/CaseLikeIf:
   Enabled: false
 
+# if・unlessのbodyが1行なら&&か||を使う制約。無理に短くする必要はない。
+Style/IfUnlessModifier:
+  Enabled: false
+
 ##################### Lint ##################################
 
 # 一部変数(userなど)が使えない。可読性を下げるから使えるようにする。
