--- a/config/database.yml
+++ b/config/database.yml
@@ -10,7 +10,7 @@ default: &default
 development:
   <<: *default
   database: UExpress_DB
-  #host: db
+  host: db
   socket: /tmp/mysql.sock
 
 # Warning: The database defined as "test" will be erased and
