--- a/config/database.yml
+++ b/config/database.yml
@@ -3,14 +3,14 @@ default: &default
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
-  username: <%= ENV.fetch('MYSQL_USER') %>
-  password: <%= ENV.fetch('MYSQL_PASSWORD') %>
+  username: <%= ENV.fetch('MYSQL_USER', 'root') %>
+  password: <%= ENV.fetch('MYSQL_PASSWORD', 'Mysql_tomita') %>
   
 
 development:
   <<: *default
   database: UExpress_DB
-  #host: db
+  host: db
   socket: /tmp/mysql.sock
 
 # Warning: The database defined as "test" will be erased and
