--- a/nginx_docker/Dockerfile
+++ b/nginx_docker/Dockerfile
@@ -4,7 +4,7 @@ FROM nginx:1.15.8
 RUN rm -f /etc/nginx/conf.d/*
 
 # Nginxの設定ファイルをコンテナにコピー
-ADD nginx.conf /etc/nginx/conf.d/fitO2.conf
+ADD nginx.conf /etc/nginx/conf.d/uexpress.conf
 
 # ビルド完了後にNginxを起動
 CMD /usr/sbin/nginx -g 'daemon off;' -c /etc/nginx/nginx.conf
