--- a/nginx_docker/nginx.conf
+++ b/nginx_docker/nginx.conf
@@ -1,34 +1,42 @@
-# プロキシ先の指定
+# このファイルは,Nginxにアクセスされたときの動作を記載する設定ファイル
+# 設定ファイルは、基本的に/etc/nginx/conf.dフォルダ配下に作成する。拡張子が.confのものがすべて読み込まれる設定
+
 # Nginxが受け取ったリクエストをバックエンドのpumaに送信
-upstream UExpress {
+upstream uexpress {
   # ソケット通信したいのでpuma.sockを指定
-  server unix:///UExpress/tmp/sockets/puma.sock;
+  server unix:///uexpress/tmp/sockets/puma.sock;
 }
 
+# サーバーの設定
 server {
+  # 接続を受け付けるポート番号
   listen 80;
 # =========ローカルと本番切り替え===========
   # server_name ◯◯◯.◯◯◯.◯◯◯.◯◯◯;
+  # 接続を受け付けるリクエストURL
   server_name localhost;
 # ======================================
 
+  # ログ出力先の設定(多分)
   access_log /var/log/nginx/access.log;
   error_log  /var/log/nginx/error.log;
 
-   # ドキュメントルートの指定
-  root /UExpress/public;
+   # ドキュメントルートの指定 / 接続が来た際のrootディレクトリ
+  root /uexpress/public;
 
   client_max_body_size 100m;
   error_page 404             /404.html;
   error_page 505 502 503 504 /500.html;
-  try_files  $uri/index.html $uri @UExpress;
+  try_files  $uri/index.html $uri @uexpress;
   keepalive_timeout 5;
 
   # リバースプロキシ関連の設定
-  location @UExpress {
+  # プロキシは、ブラウザの代わりにホームページにアクセスするサーバー
+  # 対してリバースプロキシは、webサーバの代わりにクライアントから直接アクセスを受けつけページを返すサーバー
+  location @uexpress {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $http_host;
-    proxy_pass http://UExpress;
+    proxy_pass http://uexpress;
   }
 }
