--- a/nginx_docker/nginx.conf
+++ b/nginx_docker/nginx.conf
@@ -11,11 +11,9 @@ upstream uexpress {
 server {
   # 接続を受け付けるポート番号
   listen 80;
-# =========ローカルと本番切り替え===========
-  # server_name ◯◯◯.◯◯◯.◯◯◯.◯◯◯;
+
   # 接続を受け付けるリクエストURL
-  server_name localhost;
-# ======================================
+  server_name 35.78.33.136;
 
   # ログ出力先の設定(多分)
   access_log /var/log/nginx/access.log;
