--- a/config/database.yml
+++ b/config/database.yml
@@ -30,4 +30,4 @@ production:
   username: <%= ENV['MYSQL_USER'] %>
   password: <%= ENV['MYSQL_PASSWORD'] %>
   host: <%= ENV['DB_HOST'] %>
-  socket: /var/lib/mysql/mysql.sock
+  port: 3306
