<development env>updated files related docker for development env  #44

--- a/nginx_docker/nginx.conf
+++ b/nginx_docker/nginx.conf
@@ -13,7 +13,7 @@ server {
   listen 80;
 
   # 接続を受け付けるリクエストURL
-  server_name 35.78.33.136;
+  server_name localhost;
 
   # ログ出力先の設定(多分)
   access_log /var/log/nginx/access.log;
