--- a/config/database.yml
+++ b/config/database.yml
@@ -8,10 +8,10 @@ default: &default
 development:
   <<: *default
   database: UExpress_DB
+  username: <%= ENV['MYSQL_USER'] %>
+  password: <%= ENV['MYSQL_PASSWORD'] %>
   host: db
-  socket: /tmp/mysql.sock
-  username: <%= ENV.fetch('MYSQL_USER') %>
-  password: <%= ENV.fetch('MYSQL_PASSWORD') %>
+  port: 3306
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
