<develop env>can search multiple words at once

--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -38,6 +38,7 @@ Style/SymbolProc:
 Style/RedundantReturn:
   Exclude:
   - 'app/models/room.rb'
+  - 'app/models/application_record.rb'
 
 ######## Rails ########
 Rails/FilePath:
