--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,7 +61,9 @@ workflows:
           tag: "${CIRCLE_SHA1}"
           filters:
               branches:
-                only: main
+                only:
+                  - main
+                  - preparation_releasing_site
       - aws-ecs/deploy-service-update:
           name: 'nginx/deploy-service-update'
           requires:
@@ -83,7 +85,9 @@ workflows:
           tag: "${CIRCLE_SHA1}"
           filters:
               branches:
-                only: main
+                only:
+                  - main
+                  - preparation_releasing_site
       - aws-ecs/deploy-service-update:
           name: 'rails/deploy-service-update'
           requires:
