--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,9 @@ yarn-debug.log*
 
 # 環境変数記載のファイルをpushしない
 .env
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
