--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -14,6 +14,7 @@ Style/YodaCondition:
 Style/ConditionalAssignment:
   Exclude:
   - 'app/controllers/incremental_searchs_controller.rb'
+  - 'app/controllers/spa/backend/helloworlds_controller.rb'
 
 # carrierwaveのファイルはできるだけデフォルトの状態にしたい。
 Style/PercentLiteralDelimiters:
